--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/boardproject
+spring.datasource.url=jdbc:mysql://localhost:3306/elice
 spring.datasource.username=root
-spring.datasource.password=fhrzl1414!
+spring.datasource.password=ehdgusdl11!
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.hibernate.ddl-auto=create
-spring.jpa.show-sql=true
+##spring.jpa.hibernate.ddl-auto=create
+##spring.jpa.show-sql=true
 
 spring.profiles.active=local
