--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/elice
+spring.datasource.url=jdbc:mysql://localhost:3306/StudyClub
 spring.datasource.username=root
 spring.datasource.password=ehdgusdl11!
 
