--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,5 +5,6 @@ spring.datasource.password=ehdgusdl11!
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 ##spring.jpa.hibernate.ddl-auto=create
 ##spring.jpa.show-sql=true
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
 spring.profiles.active=local
