--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/elice
+spring.datasource.url=jdbc:mysql://localhost:3306/StudyClub
 spring.datasource.username=root
 spring.datasource.password=ehdgusdl11!
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 ##spring.jpa.hibernate.ddl-auto=create
 ##spring.jpa.show-sql=true
-spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+
 
 spring.profiles.active=local
