--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,11 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/StudyClub
+spring.datasource.url=jdbc:mysql://localhost:3306/tsproject
 spring.datasource.username=root
 spring.datasource.password=ehdgusdl11!
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 ##spring.jpa.hibernate.ddl-auto=create
 ##spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
 
 
 spring.profiles.active=local
