--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,5 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 ##spring.jpa.hibernate.ddl-auto=create
 ##spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
-
-
 spring.profiles.active=local
+spring.mvc.hiddenmethod.filter.enabled=true
