--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,4 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.profiles.active=local
 spring.mvc.hiddenmethod.filter.enabled=true
+spring.jpa.open-in-view=false
