feat: board,post,comment,login기능구현 완료 view Clear

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,5 @@ spring.jpa.hibernate.ddl-auto=update
 spring.profiles.active=local
 spring.mvc.hiddenmethod.filter.enabled=true
 spring.jpa.open-in-view=false
+spring.security.user.name=root
+spring.security.user.password=ehdgusdl11!
