--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,6 @@ spring.mvc.hiddenmethod.filter.enabled=true
 spring.jpa.open-in-view=false
 spring.security.user.name=root
 spring.security.user.password=ehdgusdl11!
+spring.security.user.roles=USER
+
+
